--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,7 @@ autopep8 = "*"
 django = "*"
 django-rest-framework = "*"
 django-heroku = "*"
+gunicorn = "*"
 
 [requires]
 python_version = "3.7"
