--- a/Pipfile
+++ b/Pipfile
@@ -11,6 +11,7 @@ django = "*"
 django-rest-framework = "*"
 django-heroku = "*"
 gunicorn = "*"
+psycopg2 = "*"
 
 [requires]
 python_version = "3.7"
