--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,7 @@ django-heroku = "*"
 gunicorn = "*"
 psycopg2 = "*"
 dj-rest-auth = "*"
+django-allauth = "*"
 
 [requires]
 python_version = "3.7"
