had to add isauth to view permissions, having issue with django permission settings need to inspect, also added django cors headers to allow CORS req, need to make cors whitelist soon

--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ dj-rest-auth = "*"
 django-allauth = "*"
 pyyaml = "*"
 drf-yasg = "*"
+django-cors-headers = "*"
 
 [requires]
 python_version = "3.7"
